--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "CHANGE THIS : Extension boilerplate",
+  "name": "Where Is Waldo",
   "version": "0.0.1",
   "manifest_version": 2,
-  "description": "This extension was created with the awesome extensionizr.com",
-  "homepage_url": "http://extensionizr.com",
+  "description": "Try to find waldo in your page!",
+  "homepage_url": "http://whereiswaldo.co.il",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
