did some work on drag shadow, fuigered out how to activate Content_Strip

--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -34,7 +34,7 @@
   "content_scripts": [
     {
       "matches": [
-        "http://*/*"
+        "<all_urls>"
       ],
       "css": [
         "src/inject/inject.css"
